--- a/_posts/Web Designers/2020-01-18-jane-doe.md
+++ b/_posts/Web Designers/2020-01-18-jane-doe.md
@@ -1,5 +1,5 @@
 ---
-plan: basic
+plan: premium
 title: Jane Doe
 image: "https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80"
 category: web-designer
@@ -8,4 +8,5 @@ email: example@gmail.com
 phone: 88888888
 hire: "tel:+9188888888"
 bio: I make websites.
+instagran: "https://instagram.com/jane"
 ---
